loging page desing done

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <h1 class="text-center text-uppercase pt-5">Welcome to Paypal Bank</h1>
+    <section id="login-area" class="container pt-5 mt-5">
+        <h1 class="text-center text-capitalize pt-5">Welcome to Paypal Bank</h1>
+        <div class="submit-area shadow-lg p-3 mb-5 bg-white rounded p-5">
+            <h4>Login to your account</h4>
+            <input type="email" class="form-control mt-3" placeholder="Please type your email here">
+            <input type="password" class="form-control mt-3" placeholder="Please type your password">
+            <button type="submit" class="btn btn-success mt-3">Log In</button>
+        </div>
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
