Bank website complete

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="card bg-danger">
                 <div class="card-body">
                 <h5 class="card-title">Withdraw</h5>
-                <h1>$00</h1>
+                <h1>$<span id="withdraw-amount-change">00</span></h1>
                 </div>
             </div>
             <div class="card bg-warning">
@@ -52,8 +52,8 @@
             <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                 <div class="card-body">
                     <h3 class="card-title">Withdraw</h3>
-                    <input type="number" class="form-control" placeholder="$ Amount you want to withdraw ">
-                    <button type="submit" id= "" class="btn btn-success mt-3">Withdraw</button>
+                    <input type="number" id = "withdraw-amount" class="form-control" placeholder="$ Amount you want to withdraw ">
+                    <button type="submit" id= "withdraw-button" class="btn btn-success mt-3">Withdraw</button>
                 </div>
             </div>
         </div>
